Documenting the code

--- a/experiments/item_item_lr.ipynb
+++ b/experiments/item_item_lr.ipynb
@@ -1,8 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Item to item collaborative filtering\n",
+    "\n",
+    "An idea of item-to-item collaborative filtering approach is that recommendations are based on finding similarities between the items in terms of how they are rated by the users.\\\n",
+    "So, the matrix of interactions is built, and cosine similarities between the items are calculated."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,8 +21,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Preprocessing**\\\n",
+    "For this task we need the ratings table only."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +103,7 @@
        "4  276729  0521795028      6"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,156 +115,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we drop the rows with:\n",
+    "- missing data (all the values are crucial)\n",
+    "- zero ratings (as they have no impact)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total ratings: 1149780\n"
+      "Total ratings: 1149780\n",
+      "Total ratings (cleaned): 433671\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>user</th>\n",
-       "      <th>item</th>\n",
-       "      <th>label</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>276726</td>\n",
-       "      <td>0155061224</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>276729</td>\n",
-       "      <td>052165615X</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>276729</td>\n",
-       "      <td>0521795028</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>276736</td>\n",
-       "      <td>3257224281</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>276737</td>\n",
-       "      <td>0600570967</td>\n",
-       "      <td>6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1149773</th>\n",
-       "      <td>276704</td>\n",
-       "      <td>0806917695</td>\n",
-       "      <td>5</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1149775</th>\n",
-       "      <td>276704</td>\n",
-       "      <td>1563526298</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1149777</th>\n",
-       "      <td>276709</td>\n",
-       "      <td>0515107662</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1149778</th>\n",
-       "      <td>276721</td>\n",
-       "      <td>0590442449</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1149779</th>\n",
-       "      <td>276723</td>\n",
-       "      <td>05162443314</td>\n",
-       "      <td>8</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>433671 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "           user         item  label\n",
-       "1        276726   0155061224      5\n",
-       "3        276729   052165615X      3\n",
-       "4        276729   0521795028      6\n",
-       "6        276736   3257224281      8\n",
-       "7        276737   0600570967      6\n",
-       "...         ...          ...    ...\n",
-       "1149773  276704   0806917695      5\n",
-       "1149775  276704   1563526298      9\n",
-       "1149777  276709   0515107662     10\n",
-       "1149778  276721   0590442449     10\n",
-       "1149779  276723  05162443314      8\n",
-       "\n",
-       "[433671 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "print('Total ratings:', ratings_df.shape[0])\n",
     "\n",
     "ratings_df = ratings_df[ratings_df['label'] > 0]\n",
-    "ratings_df.dropna()"
+    "ratings_df.dropna()\n",
+    "\n",
+    "print('Total ratings (cleaned):', ratings_df.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After experimenting with straightfoward approach with sparse matrices (ItemRecommender class) we swithced to LibRecommender, which is far superior in terms of performance due to a number of optimizations.\\\n",
+    "The tasks performed below are:\n",
+    "- train/eval split\n",
+    "- data preparation to LibReco model input\n",
+    "- model creation with 10 nearest neighbors configuration"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training start time: \u001b[35m2024-08-11 20:23:50\u001b[0m\n",
+      "Training start time: \u001b[35m2024-08-11 22:08:04\u001b[0m\n",
       "Final block size and num: (1251, 127)\n",
-      "sim_matrix elapsed: 93.239s\n",
+      "sim_matrix elapsed: 113.577s\n",
       "sim_matrix, shape: (158852, 158852), num_elements: 96093388, density: 0.3808 %\n"
      ]
     },
@@ -254,7 +176,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "top_k: 100%|██████████| 158852/158852 [00:24<00:00, 6539.79it/s] \n"
+      "top_k: 100%|██████████| 158852/158852 [00:37<00:00, 4252.62it/s]\n"
      ]
     }
    ],
@@ -269,7 +191,6 @@
     "train_data, data_info = DatasetPure.build_trainset(train_df)\n",
     "eval_data = DatasetPure.build_evalset(eval_df)\n",
     "\n",
-    "# Step 3: Build and train the model\n",
     "model = ItemCF(task=\"ranking\", \n",
     "               data_info=data_info,\n",
     "               k_sim=10, \n",
@@ -280,15 +201,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluating the model on 3 metrics: precision, recall and NDCG (Normalized Discounted Cumulative Gain)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise:   1%|          | 156/16407 [00:01<01:25, 189.01it/s]"
+      "eval_listwise:   1%|          | 119/16407 [00:01<02:31, 107.27it/s]"
      ]
     },
     {
@@ -302,7 +230,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise:   2%|▏         | 259/16407 [00:01<00:50, 317.04it/s]"
+      "eval_listwise:   1%|▏         | 221/16407 [00:01<01:20, 202.05it/s]"
      ]
     },
     {
@@ -318,28 +246,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise:   2%|▏         | 376/16407 [00:01<00:36, 436.60it/s]"
+      "eval_listwise:   2%|▏         | 287/16407 [00:01<01:03, 254.50it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31mno suitable recommendation for user 56690, return default recommendation\u001b[0m\n",
-      "\u001b[31mno suitable recommendation for user 17623, return default recommendation\u001b[0m\n"
+      "\u001b[31mno suitable recommendation for user 56690, return default recommendation\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise:   3%|▎         | 511/16407 [00:01<00:29, 531.08it/s]"
+      "eval_listwise:   3%|▎         | 480/16407 [00:02<00:47, 338.75it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\u001b[31mno suitable recommendation for user 17623, return default recommendation\u001b[0m\n",
       "\u001b[31mno suitable recommendation for user 53915, return default recommendation\u001b[0m\n",
       "\u001b[31mno suitable recommendation for user 66434, return default recommendation\u001b[0m\n"
      ]
@@ -348,7 +276,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise:   5%|▍         | 804/16407 [00:02<00:22, 686.16it/s]"
+      "eval_listwise:   4%|▍         | 734/16407 [00:03<00:32, 478.31it/s]"
      ]
     },
     {
@@ -363,7 +291,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise: 100%|██████████| 16407/16407 [00:08<00:00, 1962.18it/s]\n"
+      "eval_listwise: 100%|██████████| 16407/16407 [00:11<00:00, 1394.84it/s]\n"
      ]
     },
     {
@@ -386,12 +314,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We've got pretty average results. Moreover, there were items with no recommendations due to not enough ratings. So, then we decided to remove rare books from the dataset for this task."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Removing rare books**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -412,16 +347,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training start time: \u001b[35m2024-08-11 20:25:57\u001b[0m\n",
+      "Training start time: \u001b[35m2024-08-11 22:10:48\u001b[0m\n",
       "Final block size and num: (2034, 1)\n",
-      "sim_matrix elapsed: 0.055s\n",
+      "sim_matrix elapsed: 0.080s\n",
       "sim_matrix, shape: (2034, 2034), num_elements: 1217048, density: 29.4175 %\n"
      ]
     },
@@ -429,7 +364,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "top_k: 100%|██████████| 2034/2034 [00:00<00:00, 8465.58it/s]\n"
+      "top_k: 100%|██████████| 2034/2034 [00:00<00:00, 5034.83it/s]\n"
      ]
     }
    ],
@@ -451,14 +386,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "eval_listwise: 100%|██████████| 1676/1676 [00:01<00:00, 972.62it/s] \n"
+      "eval_listwise: 100%|██████████| 1676/1676 [00:02<00:00, 704.92it/s] \n"
      ]
     },
     {
@@ -475,6 +410,13 @@
     "\n",
     "eval_result = evaluate(model, eval_data, neg_sampling=True, metrics=[ \"precision\", \"recall\", \"ndcg\"])\n",
     "print(f\"Evaluation Results:\\n{eval_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the precision is not big. But 5-times better compared to a dataset with rare books."
    ]
   }
  ],
