--- a/experiments/user_user_lr.ipynb
+++ b/experiments/user_user_lr.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# User to User collaborative filtering\n",
+    "\n",
+    "An idea of user-to-user collaborative filtering approach is that recommendations are based on finding similarities between the users in terms of how they rated the items. So, it is like item-to-item but rows of the matrix are columns now\\\n",
+    "So, the matrix of interactions is built, and cosine similarities between the users are calculated."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -8,6 +18,14 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Preprocessing**\\\n",
+    "For this task we need the ratings table only."
    ]
   },
   {
@@ -94,6 +112,15 @@
     "ratings_df = pd.read_csv('../data/Ratings.csv', delimiter=';', dtype={'User-ID': np.int32, 'ISBN': str, 'Rating': np.int8})\n",
     "ratings_df.columns = ['user', 'item', 'label']\n",
     "ratings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we drop the rows with:\n",
+    "- missing data (all the values are crucial)\n",
+    "- zero ratings (as they have no impact)"
    ]
   },
   {
@@ -236,6 +263,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After experimenting with straightfoward approach with sparse matrices (UserRecommender class) we switched to LibRecommender, which is far superior in terms of performance due to a number of optimizations.\\\n",
+    "The tasks performed below are:\n",
+    "- train/eval split\n",
+    "- data preparation to LibReco model input\n",
+    "- model creation with 5 nearest neighbors configuration"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -283,11 +321,18 @@
     "# Step 3: Build and train the model\n",
     "model = UserCF(task=\"ranking\", \n",
     "               data_info=data_info,\n",
-    "               k_sim=10, \n",
+    "               k_sim=5, \n",
     "               sim_type=\"cosine\", \n",
     "               min_common=1)\n",
     "\n",
     "model.fit(train_data, neg_sampling=True)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluating the model on 3 metrics: precision, recall and NDCG (Normalized Discounted Cumulative Gain)."
    ]
   },
   {
@@ -352,6 +397,13 @@
     "\n",
     "eval_result = evaluate(model, eval_data, neg_sampling=True, metrics=[ \"precision\", \"recall\", \"ndcg\"])\n",
     "print(f\"Evaluation Results:\\n{eval_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There were users with no recommendations due to not enough ratings. So, then we decided to give recommendations for the users with <5 ratings for this task"
    ]
   },
   {
@@ -447,6 +499,13 @@
     "\n",
     "eval_result = evaluate(model, eval_data, neg_sampling=True, metrics=[ \"precision\", \"recall\", \"ndcg\"])\n",
     "print(f\"Evaluation Results:\\n{eval_result}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Finally, the precision is not big. But 5-times better compared to a dataset with users which rated less then 5 books"
    ]
   }
  ],
