Add ReadME details

--- a/experiments/funksvd_recommender.ipynb
+++ b/experiments/funksvd_recommender.ipynb
@@ -68,7 +68,7 @@
         "id": "eiEcPtMf3v8Q",
         "outputId": "9374ecaf-a6ea-448a-f31c-2d6ab5015094"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -105,39 +105,11 @@
       ]
     },
     {
-      "cell_type": "code",
-      "source": [
-        "import tensorflow as tf\n",
-        "\n",
-        "# Print the TensorFlow version\n",
-        "print(tf.__version__)\n"
-      ],
-      "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "fUtGcbM-6xyw",
-        "outputId": "4a31451e-a1a5-412e-f490-67b16478baee"
-      },
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "2.15.0\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "source": [],
       "metadata": {
-        "id": "HWpckr8y3v8T"
-      },
-      "execution_count": null,
-      "outputs": []
+        "id": "vMUiWRSkA2w5"
+      }
     },
     {
       "cell_type": "code",
@@ -164,7 +136,7 @@
         "trusted": true,
         "id": "pol6rg6z3v8U"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -187,7 +159,7 @@
         "id": "2wtRYu6I3v8V",
         "outputId": "cbe5c60a-778a-4fa9-dbd2-a98d74c93cc8"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -207,102 +179,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def abs_loss(gt_ratings, pred_ratings, isbn_to_index):\n",
-        "    loss = 0\n",
-        "    count = 0\n",
-        "\n",
-        "    for _, row in gt_ratings.iterrows():\n",
-        "        user_id = row['User-ID']\n",
-        "        isbn = row['ISBN']\n",
-        "        gt_rating = row['Rating']\n",
-        "\n",
-        "        item_index = isbn_to_index.get(isbn)\n",
-        "        if item_index is None or user_id not in pred_ratings:\n",
-        "            continue\n",
-        "\n",
-        "        pred_rating = pred_ratings[user_id].get(item_index)\n",
-        "        if pred_rating is None:\n",
-        "            continue\n",
-        "\n",
-        "        loss += np.abs(gt_rating - pred_rating)\n",
-        "        count += 1\n",
-        "\n",
-        "    return loss / count if count > 0 else 0\n",
-        "\n",
-        "\n",
-        "def l2_loss(gt_ratings, pred_ratings, isbn_to_index):\n",
-        "    loss = 0\n",
-        "    count = 0\n",
-        "\n",
-        "    for _, row in gt_ratings.iterrows():\n",
-        "        user_id = row['User-ID']\n",
-        "        isbn = row['ISBN']\n",
-        "        gt_rating = row['Rating']\n",
-        "\n",
-        "        item_index = isbn_to_index.get(isbn)\n",
-        "        if item_index is None or user_id not in pred_ratings:\n",
-        "            continue\n",
-        "\n",
-        "        pred_rating = pred_ratings[user_id].get(item_index)\n",
-        "        if pred_rating is None:\n",
-        "            continue\n",
-        "\n",
-        "        loss += (gt_rating - pred_rating) ** 2\n",
-        "        count += 1\n",
-        "\n",
-        "    return np.sqrt(loss / count) if count > 0 else 0\n",
-        "\n",
-        "def dcg(relevances, rank=10):\n",
-        "    relevances = np.asarray(relevances)[:rank]\n",
-        "    n_relevances = len(relevances)\n",
-        "    if n_relevances == 0:\n",
-        "        return 0.\n",
-        "\n",
-        "    discounts = np.log2(np.arange(n_relevances) + 2)\n",
-        "    return np.sum(relevances / discounts)\n",
-        "\n",
-        "\n",
-        "def ndcg(relevances, rank=10):\n",
-        "    best_dcg = dcg(sorted(relevances, reverse=True), rank)\n",
-        "    if best_dcg == 0:\n",
-        "        return 0.\n",
-        "\n",
-        "    return dcg(relevances, rank) / best_dcg\n",
-        "\n",
-        "\n",
-        "def precision_at_k(recommended_items, relevant_items, k):\n",
-        "    recommended_at_k = recommended_items[:k]\n",
-        "    relevant_and_recommended = [item for item in recommended_at_k if item in relevant_items]\n",
-        "    return len(relevant_and_recommended) / k\n",
-        "\n",
-        "\n",
-        "def recall_at_k(recommended_items, relevant_items, k):\n",
-        "    \"\"\"Calculate recall at k.\"\"\"\n",
-        "    if relevant_items.size == 0:  # Use size attribute to check if the array is empty\n",
-        "        return 0.0  # Return 0 recall if there are no relevant items\n",
-        "\n",
-        "    recommended_at_k = recommended_items[:k]\n",
-        "    relevant_and_recommended = [item for item in recommended_at_k if item in relevant_items]\n",
-        "    return len(relevant_and_recommended) / len(relevant_items)\n",
-        "\n"
-      ],
-      "metadata": {
-        "execution": {
-          "iopub.status.busy": "2024-08-10T19:00:47.455773Z",
-          "iopub.execute_input": "2024-08-10T19:00:47.456339Z",
-          "iopub.status.idle": "2024-08-10T19:00:47.478325Z",
-          "shell.execute_reply.started": "2024-08-10T19:00:47.456281Z",
-          "shell.execute_reply": "2024-08-10T19:00:47.476878Z"
-        },
-        "trusted": true,
-        "id": "_DwC6r4K3v8V"
-      },
-      "execution_count": 5,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "from google.colab import drive\n",
         "drive.mount('/content/drive')\n"
       ],
@@ -313,7 +189,7 @@
         "id": "-yHYltNL6QZS",
         "outputId": "a40b0f96-154a-4e54-881a-34b649b1785b"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -355,7 +231,7 @@
         "id": "MLROq3Wi3v8W",
         "outputId": "245b95f5-b8fd-4c7a-fb1d-975804a78c02"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -366,6 +242,15 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Data processing"
+      ],
+      "metadata": {
+        "id": "W77ydOF1A67K"
+      }
     },
     {
       "cell_type": "code",
@@ -386,7 +271,7 @@
         "trusted": true,
         "id": "DkteA4nN3v8X"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -406,7 +291,7 @@
         "trusted": true,
         "id": "Y-DPQpa43v8X"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -425,7 +310,7 @@
         "trusted": true,
         "id": "n2D6xYpx3v8Y"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -457,7 +342,7 @@
         "id": "agstIe0P3v8Y",
         "outputId": "c5e279e9-6efc-4666-8c68-d6195b1a9d5f"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -493,7 +378,7 @@
         "trusted": true,
         "id": "91UCfG_H3v8Y"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -514,7 +399,7 @@
         "trusted": true,
         "id": "sP07IpxY3v8Z"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -534,8 +419,17 @@
         "trusted": true,
         "id": "BSpZaXoL3v8Z"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Embbedding fetching"
+      ],
+      "metadata": {
+        "id": "P48r16SnA-z0"
+      }
     },
     {
       "cell_type": "code",
@@ -545,7 +439,7 @@
       "metadata": {
         "id": "rgIcsb62Ixf1"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -563,7 +457,7 @@
       "metadata": {
         "id": "sArslFUIJlOq"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -585,7 +479,7 @@
         "id": "-EFGkYu0JcZ6",
         "outputId": "6eb30ec7-f1ae-4750-9aa8-0bc91106e63e"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -595,15 +489,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "agSkdLS94OAc"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -617,7 +502,7 @@
         "id": "25jlRFSXuwvs",
         "outputId": "28594d19-a339-4a2f-8534-23c10ec9573e"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -639,7 +524,7 @@
       "metadata": {
         "id": "Zv_BxSHH4rQG"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -662,7 +547,7 @@
         },
         "outputId": "ad9cd51d-cc9b-41be-8972-f974d3aae7ef"
       },
-      "execution_count": 323,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -697,7 +582,7 @@
         },
         "outputId": "e0989d19-5ce9-4443-dce0-8c315da645c0"
       },
-      "execution_count": 324,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,7 +617,7 @@
         },
         "outputId": "4087da83-2943-42ec-b937-3f43fc4cfc85"
       },
-      "execution_count": 325,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -755,7 +640,7 @@
       "metadata": {
         "id": "uvmvRZk8NlND"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -770,8 +655,17 @@
       "metadata": {
         "id": "BiyVp9miAKoF"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Training and Evaluation"
+      ],
+      "metadata": {
+        "id": "p2DytnPQBTqQ"
+      }
     },
     {
       "cell_type": "code",
@@ -781,7 +675,7 @@
       "metadata": {
         "id": "kNETUBm6GS9A"
       },
-      "execution_count": 174,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -827,7 +721,7 @@
         "id": "_BjGHrDCjGs9",
         "outputId": "c9d446c5-5587-4380-ab06-6eb97441d682"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108728,7 +108622,7 @@
         "id": "2Mxa0Db9ky35",
         "outputId": "6fc96fa9-125a-4ef1-a447-b917e6f4da06"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -108786,7 +108680,7 @@
         "id": "-JEKxW6cAjd3",
         "outputId": "8e2b7127-9f74-40ec-b97a-b35c28e02948"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
