--- a/experiments/rnn_lr.ipynb
+++ b/experiments/rnn_lr.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Sequential recommender\n",
+    "The idea of this task is to use a sequential model for recommending. For this task a pre-processed version of dataset is used. Where we add embeddings generated from the books descriptions and reduced with PCA. Order of recommendations is implicit (as our dataset does not contain the interactions). Yet, an alternative version with augmented timestamps was also tested. As the timestamps were generated randomly, it makes no significant difference for the final results."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -173,6 +181,13 @@
     "# ratings_df = pd.read_csv('../data/Ratings_merged_emb_time.csv', delimiter=',')\n",
     "ratings_df = pd.read_csv('../data/df_with_emb_cleaned.csv', delimiter=',')\n",
     "ratings_df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Data preparation includes specification of the columns into categorical and non-categorical (dense) and user vs item. RNN4Rec uses Recursive Neural Network approach under the hood, with the LSTM layers"
    ]
   },
   {
